# ouroboros

./: README.md  pyproject.toml
src/ouroboros/: __init__.py  tensor.py  util.py
