[tool.poetry]
name = "ouroboros"
version = "0.1.0"
description = ""
authors = ["Robert Dumitru <72272382+robert-dumitru@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
